# mybgalin

./: .gitattributes  .gitignore  API_TESTING_GUIDE.md  BACKEND_ANALYSIS.md  BACKEND_DEPLOYMENT.md  BUN_TROUBLESHOOTING.md  CHECKLIST.md  CHECK_DEPLOYMENT.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_READY.md  DOCKER_TROUBLESHOOTING.md  FINAL_REPORT.md  FINAL_SETUP.md  FIRST_DEPLOY.md  HH_SETUP.md  MIGRATION_SUMMARY.md  N8N_SETUP.md  NGINX_FIX.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOY_TEST.md  README.md  SERVER_STRUCTURE_ANALYSIS.md  SSH_TROUBLESHOOTING.md  STEAM_WORKSHOP_TROUBLESHOOTING.md  bgalin-backend.service  bgalin_ru.crt  bgalin_ru.p7b  check-status.sh  dev.bat  dev.sh  docker-compose.yml  ecosystem.config.js  nginx-bgalin.conf  private.key  prod.bat  prod.sh  request.csr  (+2 more)
.github/: DEPLOYMENT.md  SECRETS.md  TROUBLESHOOTING.md
.github/workflows/: deploy.yml  test.yml  (+1 more)
desktop-app/: README.md
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: auth.rs  commands.rs  database.rs  main.rs
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
pc-client/: Cargo.toml  README.md
pc-client/src/: main.rs
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  JOB_SEARCH_API.md  QUICK_START.md  README.md  Rocket.toml  gamestate_integration_bgalin.cfg  init_prisma.js  package.json
server/.cargo/: config.toml
server/prisma/: schema.prisma
server/src/: index.ts  main.rs
server/src/alice/: models.rs  service.rs
server/src/anime/: mod.rs  models.rs  sheets.rs  shikimori.rs
server/src/auth/: mod.rs
server/src/controllers/: admin.ts  anime.ts  auth.ts  cs2.ts  english.ts  files.ts  jobs.ts  links.ts  menu.ts  portfolio.ts  public.ts  publish.ts  studio.ts  sync.ts  t2.ts
server/src/cs2/: players.rs
server/src/db/: index.ts  mod.rs
server/src/files/: models.rs  service.rs
server/src/guards/: mod.rs
server/src/jobs/: ai.rs  hh_api.rs  mod.rs  models.rs  scheduler.rs
server/src/middleware/: auth.ts
server/src/models/: mod.rs
server/src/portfolio/: models.rs
server/src/publish/: models.rs  service.rs
server/src/routes/: admin.rs  alice.rs  anime.rs  auth.rs  console.rs  english.rs  files.rs  jobs.rs  links.rs  mod.rs  portfolio.rs  publish.rs  studio.rs  sync.rs
server/src/services/: ai.ts  anime.ts  auth.ts  cs2.ts  english.ts  files.ts  hh.ts  publish.ts  scheduler.ts  studio.ts  sync.ts  telegram.ts
server/src/steam/: mod.rs
server/src/studio/: models.rs  service.rs
server/src/sync/: models.rs  service.rs
server/src/t2/: ai.rs  guards.rs  models.rs  routes.rs
server/src/telegram/: mod.rs
server/src/utils/: ua.ts
server/sync_storage/25a3998e-25ec-47f9-8154-efb4d85675b6/: 0ab8d1f8-57ea-413a-a539-465c941d6a8b  0e7e35f3-0ae0-440f-819d-ec80afbf0e55  16f97ff0-e3d5-43af-a1c2-5db3b73619e4  295d971e-1159-4e3c-9e60-ef2334e66d8a  3704cfc1-10b0-4b97-b55e-86f066c15206  370805cd-7e55-4cae-be72-f0475e0297ca  3dde2b2f-4462-4df6-bc7e-205315310cad  4368100f-1d9a-4f23-b101-367b8bd80948  43708a86-fcc5-4240-b957-4251cb0001f0  462549b8-2e3b-42fd-bd62-bc9a4c74fe5d  4d357ecc-5fd4-4d92-b64a-c18e868afc33  5230f857-993e-4593-ae75-5e2982ac50da  7395e93f-44c1-408b-929e-3bf8d48ff555  82e0987e-2bdd-4439-9bfe-277af81075b6  9069bd45-85c7-43c5-a511-4fa9b221f8e2  9339da3e-24d7-45a7-ac11-28c1d53341e8  952808ae-3184-404e-8cd7-f2d4b7c2103c  aa1f75fa-a89b-4ee4-b787-9b238d876802  b1ce2950-2d57-4ffc-bf84-bad9a3bb988c  c7ade1d8-8767-490d-9a6d-2f1d3370a996  cbe4369a-811b-4215-afd7-78a2ace5594a  d631c3af-5f16-4082-8d12-83d65cb85f19  da4347ab-7e13-4d1f-abbc-1c3b42b64928  e0ce127f-e333-45da-8b22-45015d48fde1  eb11304f-db05-46d0-b236-3311dbcb06df  fdd15c71-1cad-4e26-a232-daf53597fa66
server/uploads/files/: 677de75a-56e9-420b-a7eb-ea9fad696077
server_rust_backup/: CS2_INTEGRATION.md  JOBS_SYSTEM.md  README.md  Rocket.toml  errors.txt
sync-client/: Cargo.toml
sync-client/src/: config.rs  main.rs  sync.rs  watcher.rs
(+142 files in other folders)
