[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono"] }
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
dotenv = "0.15"
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"
tokio-cron-scheduler = "0.9"
csv = "1.3"
urlencoding = "2.1"
url = "2.5"
tempfile = "3.10"
image = "0.25"
ab_glyph = "0.2"
imageproc = "0.24"
regex = "1.10"
