[package]
name = "cloud-sync"
version = "0.1.0"
edition = "2021"
description = "Cloud file sync client"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# File system watching
notify = "6"
notify-debouncer-mini = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI and config
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Hashing
sha2 = "0.10"

# Directories
dirs = "5"

# Other
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
mime_guess = "2"
urlencoding = "2"
hostname = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[[bin]]
name = "cloud-sync"
path = "src/main.rs"
